# fleet-of-UAVs-OSL

./: README
Gaden modified packages/simulated_gas_sensor/: CMakeLists.txt  package.xml
Gaden modified packages/simulated_gas_sensor/msg/: sensor_sim.msg  sim_sensor.msg  sim_sensor_vec.msg  vector.msg  vector_pose.msg  waypoint_test.msg
Gaden modified packages/simulated_gas_sensor/src/: fake_gas_sensor.cpp
controller/: CMakeLists.txt
controller/include/controller/: listener.h
controller/models/outdoor/: my_outdoor.sdf
controller/models/outdoor/meshes/: building1.dae  building5.dae  building6.dae  ground_surface.dae
controller/models/outdoor/meshes/model/: building3.stl  building4.stl  building6.stl  building7.stl  wall1.stl
controller/models/outdoor1/: model.config  my_outdoor.sdf
controller/models/outdoor1/materials/scripts/: outdoor.material
controller/models/outdoor1/meshes/: building3.dae  building7.dae
controller/models/outdoor1/meshes/model/: Outlet.stl  building1.stl  building5.stl  ground_surface.stl  wall2.stl
controller/models/outdoor_space/: model.config  outdoor_space.sdf
controller/models/outdoor_space/materials/scripts/: outdoor.material
controller/models/outdoor_space/meshes/: building2.dae  building2.stl  ground.dae  ground.stl  inlet.stl  outlet.dae  wall1.dae  wall1.stl  wall2.dae
controller/msg/: Robotmsg.msg
controller/src/: fly_space.cpp  oa.cpp
controller/worlds/: midrise.world  my_world.world  outdoor.world  outdoor1.world  outdoor_space.world
hector quarotor modified package/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
hector quarotor modified package/hector_quadrotor_gazebo/urdf/: CMakeLists.txt
scripts/: motors_enables_uav_swarm.sh
sim_env/: CMakeLists.txt
sim_env/outdoor_high/cad_models/: Hrbuilding1.dae  Hrbuilding1.stl  Hrbuilding2.dae  Hrbuilding2.stl  Hrbuilding3.dae  Hrbuilding3.stl  Hrbuilding4.dae  Hrbuilding4.stl  Hrbuilding5.dae  Hrbuilding5.stl  Hrbuilding6.dae  Hrbuilding6.stl  Hrbuilding7.dae  Hrbuilding7.stl  Hrbuilding8.dae  Hrbuilding8.stl  Hrbuilding9.dae  Hrbuilding9.stl  inlet.dae  inlet.stl  outlet.dae  wall1.dae  wall1.stl  wall2.stl
sim_env/outdoor_high/data_hr/: openrisedata_0.csv_U  openrisedata_0.csv_V  openrisedata_0.csv_W  openrisedata_1.csv_U  openrisedata_1.csv_V  openrisedata_1.csv_W
sim_env/outdoor_high/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  fly.launch  main_simbot.launch  spawn_four_quadrotors.launch
sim_env/outdoor_mul/cad_models/: Inlet.stl  building2.dae  building2.stl  building4.dae
sim_env/outdoor_mul/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  fly.launch  main_simbot_mul.launch  spawn_four_quadrotors.launch
sim_env/outdoor_mul/opendata0to2/: wind_cell_new_0.csv_U  wind_cell_new_0.csv_V  wind_cell_new_0.csv_W  wind_cell_new_1.csv_U  wind_cell_new_1.csv_V  wind_cell_new_1.csv_W  (+39 more)
(+29 files in other folders)
